--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ag-grid-community": "^34.0.2",
     "ag-grid-react": "^34.0.2",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.526.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
