--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.526.0",
     "react": "^19.1.0",
