--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ag-grid-react": "^34.0.2",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
